--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "converge-peer-dependencies",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Converge peer dependencies in package.json",
   "main": "build/index.js",
   "module": "build/index.js",
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "rm -rf build && mkdir build && cp src/*.js build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha"
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,9 @@
     "semver-intersect": "^1.4.0",
     "lodash.groupby": "^4.6.0",
     "lodash.uniq": "^4.5.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2"
   }
 }
